testsuite/poke.pkl/redef-diag-1.pk
/* { dg-do compile } */

fun foo = void:
{
  var a = 10;
  var b = 20;
  var a = 30; /* { dg-error "" } */
}
